# 658-Computer

./: .gitignore  Andrew Paterson - HCP65 V1 - Fabrication.ods  DivideBy3Clock.circ  Project.xml  WDC65XX Assembly.xml
Apple II/: Apple II BOM.ods
Diagrams/: Kernal Interrupt.ods  Row Counter.dia
Documents/: Buffers, Transcievers and Translators.ods  Mainboard Small.odg  Propagation Times (541).csv  Propagation Times (541).ods  Propagation Times.ods  Voltage Levels.ods
Emulator65816/: Addressing.cpp  Addressing.h  Binary.cpp  Cpu65816.cpp  Cpu65816.h  Cpu65816Debugger.cpp  Cpu65816Debugger.h  CpuStatus.cpp  CpuStatus.h  Emulator65816.sln  Emulator65816.vcxproj  Emulator65816.vcxproj.filters  Interrupt.h  Log.cpp  Log.h  Main.cpp  MemoryDevice.cpp  MemoryDevice.h  OpCode.h  OpCodeTable.cpp  OpCode_ADC.cpp  OpCode_AND.cpp  OpCode_ASL.cpp  OpCode_BIT.cpp  OpCode_Branch.cpp  OpCode_CMP.cpp  OpCode_CPX_CPY.cpp  OpCode_EOR.cpp  OpCode_INC_DEC.cpp  OpCode_Interrupt.cpp  OpCode_JumpReturn.cpp  OpCode_LDA.cpp  OpCode_LDX.cpp  OpCode_LDY.cpp  OpCode_LSR.cpp  OpCode_Misc.cpp  OpCode_ORA.cpp  OpCode_ROL.cpp  OpCode_ROR.cpp  OpCode_SBC.cpp  (+13 more)
Emulator65816Java/: README.md
Kicad/: 2PB1424,115.stp  ABRACON.kicad_sym  All_Socket.kicad_sym  Alliance.kicad_sym  Altera.kicad_sym  Amphenol.bck  Amphenol.dcm  Amphenol.kicad_sym  Amphenol.lib  Analog_Devices.bck  Analog_Devices.dcm  Analog_Devices.kicad_sym  Analog_Devices.lib  Apem.bak  Apem.kicad_sym  Bourns.bak  Bourns.kicad_sym  CTS.kicad_sym  CUI_Devices.kicad_sym  Cree.kicad_sym  (+78 more)
Pico/LCDBusReader/: CMakeLists.txt  LCDBusReader.c
(+9135 files in other folders)
